Alignment issues
I added a height property to fix an alignment issue in the curriculum section.

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -210,6 +210,7 @@ header nav a {
 }
 
 .course-detail {
+    height: 225px;
     margin-left: 1em;
     margin-bottom: 2em;
 }
